from Employee import Employee


class CourseResponsible(Employee):
    """
    a course responsible is a special type of instructor or TA,
    that on top of their individual responsibilities, can request schedules for their assigned course and make changes
    to the schedule
    """